--- a/css/style.css
+++ b/css/style.css
@@ -21,31 +21,24 @@
 }
 
 body {
-  min-width: 960px;
-  margin: 0;
-  padding: 0;
-  font-family: "Roboto", Arial, sans-serif;
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 400;
-  color: var(--basic-black);
-  text-transform: none;
-  background-color: var(--basic-white);
-  background-image: url("../img/bg.jpg");
-  background-position: top center;
-  background-repeat: no-repeat;
+	  min-width: 960px;
+	  font-family: "Roboto", Arial, sans-serif;
+	  font-size: 16px;
+	  line-height: 24px;
+	  color: var(--basic-black);
+	  background-color: var(--basic-white);
 }
 
 a {
-  text-decoration: none;
+  	text-decoration: none;
 }
 
 img {
-  max-width: 100%;
-  height: auto;
+	  max-width: 100%;
+	  height: auto;
 }
 
-.main-navigation{
+.main-navigation {
 	font-weight: 500;
 	font-size: 16px;
 	line-height: 30px;
@@ -53,137 +46,211 @@ img {
 	background-color: var(--basic-grey);
 }
 
-.site-navigation{
+.site-navigation, .basket {
 	text-transform: uppercase;
 	list-style: none;
+	margin: 0px;
+	padding: 0px;
 }
 
 .site-navigation a, .basket {
 	color: var(--basic-black);
 }
 
-.title{
-	visibility: hidden;
+.site-navigation a:hover, .basket:hover {
+	color: var(--basic-pink);
 }
 
-.features{
+.site-navigation a:focus, .basket:focus {
+	color: var(--basic-black);
+	mix-blend-mode: normal;
+	opacity: 0.3;
+}
+
+.title {
+	display: none;
+}
+
+.features {
 	background-color: var(--basic-grey);
 	color: var(--basic-dark);
 }
 
-.features-item-title{
+.features-item-title {
 	font-weight: 500;
 	font-size: 55px;
 	line-height: 55px;
 	color: var(--basic-black);
 }
 
-.learn-more{
+.learn-more {
 	background-color: var(--basic-pink);
 	text-transform: uppercase;
 	color: var(--basic-white);
 	line-height: 18px;
 }
 
-.features-button{
+.learn-more:hover {
+	background-color: var(--basic-dark-pink);
+}
+
+.learn-more:focus {
+	background-color: var(--basic-extra-dark-pink);
+	color: var(--basic-white);
+	opacity: 0.3;
+}
+
+.features-button {
 	background-color: var(--basic-white);
 }
 
-.product-item{
+.product-item {
 	color: var(--basic-dark);
 }
 
-.product-item-title{
+.product-item-title {
 	font-weight: 700;
 	font-size: 24px;
 	line-height: 30px;
 	color: var(--basic-black);
 }
 
-.order-pink{
+.order-pink {
 	background-color: var(--basic-pink);
 	line-height: 18px;
 	color: var(--basic-white);
 	text-transform: uppercase;
 }
 
-.order-green{
+.order-pink:hover {
+	background-color: var(--basic-dark-pink);
+}
+
+.order-pink:focus {
+	background-color: var(--basic-extra-dark-pink);
+	color: var(--basic-white);
+	opacity: 0.3;
+}
+
+.order-green {
 	background-color: var(--basic-green);
 	line-height: 18px;
 	color: var(--basic-white);
 	text-transform: uppercase;
 }
 
-.order-yellow{
+.order-green:hover {
+	background-color: var(--basic-dark-green);
+}
+
+.order-green:focus {
+	background-color: var(--basic-extra-dark-green);
+	color: var(--basic-white);
+	opacity: 0.3;
+}
+
+.order-yellow {
 	background-color: var(--basic-yellow);
 	line-height: 18px;
 	color: var(--basic-white);
 	text-transform: uppercase;
 }
 
-.about{
+.order-yellow:hover {
+	background-color: var(--basic-dark-yellow);
+}
+
+.order-yellow:focus {
+	background-color: var(--basic-extra-dark-yellow);
+	color: var(--basic-white);
+	opacity: 0.3;
+}
+
+
+.about {
 	color: var(--basic-dark);
 }
 
-.about-title{
+.about-title {
 	font-weight: 500;
 	font-size: 45px;
 	line-height: 45px;
 	color: var(--basic-black);
 }
 
-.about-item b{
+.about-item b {
 	text-transform: uppercase;
 	font-weight: 700;
 	color: var(--basic-black);
 }
 
-.achievments{
+.about-features {
+	margin: 0px;
+	padding: 0px;
+}
+
+.achievments {
 	font-weight: 400;
 	font-size: 16px;
 	line-height: 18px;
 }
 
-.percents{
+.percents {
 	font-weight: 700;
 	font-size: 45px;
 	line-height: 64px;
 	color: var(--basic-black);
 }
 
-.percents sup{
+.percents sup {
 	font-size: 26px;
 	line-height: 40px;
 	color: var(--basic-black);
 }
 
-.clients ul{
+.clients-list {
 	list-style: none;
+	margin: 0px;
+	padding: 0px;
 }
 
-.contacts{
+.contacts {
 	color: var(--basic-extra-low-dark);
 }
 
-.contacts-title{
+.contacts-title {
 	font-weight: 700;
 	font-size: 18px;
 	line-height: 30px;
 	color: var(--basic-black);
 }
 
-.contacts-phone{
+.contacts-phone {
 	color: var(--basic-extra-low-dark);
 }
 
-.contact-us{
+.contact-us {
 	color: var(--basic-white);
 	background-color: var(--basic-pink);
 }
 
-.networks ul{
+.networks-list {
 	list-style: none;
+	margin: 0px;
+	padding: 0px;
 }
 
-.offer
+.networks-icon {
+	background-color: var(--basic-grey);
+}
 
+.offer b {
+	font-weight: 700;
+	font-size: 36px;
+	line-height: 36px;
+}
+
+.offer p {
+	color: var(--basic-low-dark);
+	line-height: 22px;
+}
